hotelReservation/kubernetes/frontend/frontend-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hotel-reserv-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hotel-reserv-vs
spec:
  hosts:
  - "*"
  gateways:
  - hotel-reserv-gateway
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 5000
